<?xml version="1.0"?>
<package format="3">
  <name>panther_lights</name>
  <version>1.0.0</version>

  <description>Package containing nodes responsible for displaying and scheduling animations on LED lights on Husarion Panther robot</description>
  <license>Apache License 2.0</license>

  <author email="dawid.kmak@husarion.com">Dawid Kmak</author>
  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/panther_ros</url>
  <url type="bugtracker">https://github.com/husarion/panther_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libtool</build_depend>
  <build_depend>autoconf</build_depend>
  <build_depend>autoconf-archive</build_depend>

  <depend>image_transport</depend>
  <depend>panther_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- Python dependencies -->
  <depend>python3-pil</depend>

</package>
